﻿i-MSCP ChangeLog
~~~~~~~~~~~~~~~~

------------------------------------------------------------------------------------------------------------------------
Git stable
------------------------------------------------------------------------------------------------------------------------

Tickets:

------------------------------------------------------------------------------------------------------------------------
1.1.1
------------------------------------------------------------------------------------------------------------------------

2014-02-16: Laurent Declercq
	- RELEASE i-MSCP 1.1.1

ADDONS:
	- Fixed: Awstats - Cron task is not running (dynamic mode)

CONFIGS:
	- Added: bash-completion package
	- Disabled: Opcache support (PHP5.5)

ENGINE:
	- Added: onLoadTemplate event in all server implementations
	- Fixed: DNS sub templates must be passed-in to event listeners
	- Fixed: Domain owner unique identifier must be passed-in to related servers and addons
	- Fixed: Missing CLEAR method in iMSCP::Config handler

GUI:
	- Fixed: jQuery library included twice in simple layout
	- Fixed: Ticket notification won't be delivered (Support ticket feature)
	- Fixed: Wrong download link for new release
	- Fixed: Wrong events triggered in client/profile.php
	- Updated: Datatable translations

PLUGINS:
	- Changed: iMSCP_Plugin_Manager::updatePluginInfo() method is now public
	- Fixed: Plugin Store link
	- Updated: Plugin API to version 0.2.5 (changes are backward compatible)

SETUP:
	- Changed: imscp group is now allowed to read all files from i-MSCP configuration directory

VENDOR:
	- Updated: DataTables to version 1.9.4

Tickets:
	- Fixed #1014: Bug - Link for "cancel" in Reseller - edit Domain is wrong
	- Fixed #1019: Bug - Unable to create customer with SQL feature set to disabled
	- Fixed #1020: Bug - Wrong SQL query - Search feature
	- Fixed #1022: Defect - standard email aliases not created while adding domain alias