@@ -6,6 +6,7 @@ Git stable
 ------------------------------------------------------------------------------------------------------------------------
 
 Tickets:
+	- Fixed #1021: Bug - Some htusers are not added into the htgroup file
 
 ------------------------------------------------------------------------------------------------------------------------
 1.1.1
